chore: move route /{alias} -> /api/{alias}
