# internal/app/handler/url.go
@@ -228,6 +228,15 @@ func (h *Handler) DeleteUrl(ctx *gin.Context) {
 }
 
 // Redirect redirects user from /{alias} to URL assigned to this alias.
+// Redirect      Redirects to an URL.
+// @Summary      Redirect to URL
+// @Description  Redirects to an URL
+// @Tags         url
+// @Param        alias path string true "alias"
+// @Success      308  {integer}     integer 1
+// @Failure      404  {object}      response.Error
+// @Failure      500  {object}      response.Error
+// @Router       /{alias}           [get]
 func (h *Handler) Redirect(ctx *gin.Context) {
 	log := h.log.With(
 		slog.String("op", "handler.DeleteUrl"),
