# internal/app/router/router.go
@@ -43,10 +43,12 @@ func (r *Router) InitRoutes() *gin.Engine {
 	router.Use(requestid.New)
 	router.Use(r.middleware.RequestLog)
 
-	router.GET("/:alias", r.handler.Redirect)
+	// router.GET("/:alias", r.handler.Redirect)
 
 	api := router.Group("/api")
 	{
+		api.GET("/:alias", r.handler.Redirect)
+
 		api.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 		auth := api.Group("/auth")
